--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ethereumjs-abi": "^0.6.4",
     "ethereumjs-block": "^1.3.1",
+    "ethereumjs-lib": "^3.0.0",
     "ethereumjs-tx": "^1.1.2",
     "ethereumjs-util": "^4.5.0",
     "ethereumjs-vm": "^1.3.0",
